--- a/implementation/react_frontend/src/client/public/index.html
+++ b/implementation/react_frontend/src/client/public/index.html
@@ -4,7 +4,7 @@
     <title>React.js using NPM, Babel6 and Webpack</title>
   </head>
   <body>
-    <div id="app" />
+    <div id="react_main_container" />
     <script src="bundle.js" type="text/javascript"></script>
   </body>
 </html>
