started to work on react router

--- a/implementation/react_frontend/src/client/public/index.html
+++ b/implementation/react_frontend/src/client/public/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>React.js using NPM, Babel6 and Webpack</title>
+    <title>My Blog</title>
   </head>
   <body>
     <div id="react_main_container" />
