--- a/implementation/react_frontend/src/client/public/index.html
+++ b/implementation/react_frontend/src/client/public/index.html
@@ -2,6 +2,11 @@
   <head>
     <meta charset="utf-8">
     <title>My Blog</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+    <script src="SyntaxHighlighting.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
   </head>
   <body>
     <div id="react_main_container" />
