--- a/implementation/react_frontend/src/client/public/index.html
+++ b/implementation/react_frontend/src/client/public/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Blog</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway|Open+Sans|Playfair+Display|Muli" rel="stylesheet">
     <link rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
     <script src="SyntaxHighlighting.js"></script>
