--- a/implementation/react_frontend/src/client/public/index.html
+++ b/implementation/react_frontend/src/client/public/index.html
@@ -3,13 +3,11 @@
     <meta charset="utf-8">
     <title>My Blog</title>
     <link href="https://fonts.googleapis.com/css?family=Lato|Raleway|Open+Sans|Playfair+Display|Muli" rel="stylesheet">
-    <link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
-    <script src="SyntaxHighlighting.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <link rel="stylesheet" href="./prism.css">
   </head>
   <body>
     <div id="react_main_container" />
     <script src="bundle.js" type="text/javascript"></script>
+    <script src="./prism.js"></script>
   </body>
 </html>
