--- a/implementation/react_frontend/src/client/public/index.html
+++ b/implementation/react_frontend/src/client/public/index.html
@@ -3,6 +3,9 @@
     <meta charset="utf-8">
     <title>My Blog</title>
     <link href="https://fonts.googleapis.com/css?family=Lato|Raleway|Open+Sans|Playfair+Display|Muli" rel="stylesheet">
+    <link rel="stylesheet"
+      href="./style/atom-one-dark.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
   </head>
   <body>
     <div id="react_main_container" />
